fix alignment and div overflow for main divs

--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -66,6 +66,40 @@ html, body {
     max-width: 100%;
     text-align: center;
     vertical-align: middle;
+    max-height: 100%;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    height: 500px;
+    overflow: inherit;
+}
+
+.main-content {
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    gap:200px;
+}
+
+
+.info-wrapper {
+    gap:30px;
+    font-family: 'Roboto Slab', serif;
+    display: flex;
+    overflow:inherit;
+    /* desktop */
+    @media screen and (min-width: 400vw) {
+        
+        flex-direction: row;
+    }
+
+    /* mobile */
+    @media screen and (max-width: 400px) {
+        
+        flex-direction: column;
+    }
+    
+    
 }
 
 .header {
